Susan's fix for out of memory